--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -30,14 +30,14 @@
 }
 
 .about-main-title {
-	color: #57B8D9;
+	color: #ffd900;
 	padding-top: 4%;
 	padding-bottom: 4%;
 	text-align: center;
 }
 
 .about-title {
-	color: #57B8D9;
+	color: #ffd900;
 	margin-top: 15%;
 	margin-bottom: 5%;
 	text-align: center;
@@ -49,7 +49,7 @@
 }
 
 .about-subtitle {
-	color: #57B8D9;
+	color: #ffd900;
 	padding-bottom: 2%;
 	text-align: center;
 }
