--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -73,7 +73,7 @@
           </div>
           <div class="about-body">
             <p>E.G.C.アカウントを作成し、作品について自由にアピール！<br>
-              作品について、過程、背景や思い等を投稿し、作品とあなたのことを知ってもらいましょう！！
+              背景や思い、拘り等を投稿し、作品とあなたのことを知ってもらいましょう！！
             </p>
         </div>
       </div>
@@ -92,8 +92,7 @@
           <h4>4. 作品を通して繋がろう</h4>
         </div>
         <div class="about-body">
-          <p>作品について、気軽に質問・コメント・感想 等を送りましょう！<br>
-            楽しく成長しましょう！<br>
+          <p>気軽に質問・コメント・感想 等を送りましょう！<br>
             <small>
               ＊コメントや返信があった際は、「コメントは投稿者へ」「返信はコメントをした人へ」メールで通知されます。
             </small>
