--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -13,7 +13,7 @@
     <div class="wrapper">
       <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-custom">
-          <%= link_to "E.G.C.", root_path, class: "navbar-brand  mb-0 h1" %>
+          <%= link_to "E.G.C.", root_path, class: "navbar-brand  mb-0 h1 brand" %>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -22,12 +22,11 @@
             <ul class="navbar-nav ">
 
               <% if user_signed_in? %>
-
                 <li class="nav-item">
-                  <%= link_to 'ホーム', root_path, class: "nav-link" %>
+                  <%= link_to '', root_path, class: "nav-link fas fa-home fa-lg" %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to 'E.G.C.とは？', homes_about_path, class: "nav-link" %>
+                  <%= link_to 'About', homes_about_path, class: "nav-link" %>
                 </li>
                 <li class="nav-item">
                   <%= link_to '作品一覧', posts_path, class: "nav-link" %>
@@ -45,10 +44,10 @@
                 </li>
               <% else %>
                 <li class="nav-item">
-                  <%= link_to 'ホーム', root_path, class: "nav-link" %>
+                  <%= link_to 'Home', root_path, class: "nav-link fas fa-home fa-lg" %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to 'E.G.C.とは？', homes_about_path, class: "nav-link" %>
+                  <%= link_to 'About', homes_about_path, class: "nav-link" %>
                 </li>
                 <li class="nav-item">
                   <%= link_to '作品一覧', posts_path, class: "nav-link" %>
