--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,12 +19,12 @@
     <div class ="col-md-10">
       <div class="row">
         <div class ="col-md-11 text-center">
-          <h1 class="title"><strong>作品一覧</strong></h1>
+          <h1 class="title">作品一覧</h1>
         </div>
       </div>
       <div class="row">
         <div class ="col-md-11">
-          <%= render "posts/form", posts: @posts %>
+          <%= render "posts/index_form", posts: @posts %>
         </div>
       </div>
     </div>
