--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,8 @@
 <div class ="post-main-cover">
   <div class="container-fluid">
-    <div class="row">
 
-      <div class="col-md-3">
+    <div class="row">
+      <div class="col-md-2">
         <div class="row">
           <div class ="col-md">
             <h3>コメント/質問</h3>
@@ -13,7 +13,7 @@
         </div>
       </div>
 
-      <div class ="col-md-9">
+      <div class ="col-md-10" >
 
         <div class ="post-main">
           <div class="row">
@@ -51,7 +51,8 @@
               <h5>
                 <% if @post.favorited_by?(current_user) %>
                   <%= link_to post_favorites_path(@post), method: :delete do %>
-                    <strong><i class="fas fa-heart fa-lg heart-red"></i></strong>
+                    <strong><i class="fas fa-heart fa-lg heart-red"></i>
+                    </strong>
                   <% end %>
                 <% else %>
                   <%= link_to post_favorites_path(@post), method: :post do %>
@@ -103,12 +104,12 @@
           </div>
 
           <% if @post.user == current_user %>
-              <div class="row">
-                <div class ="col-md text-center">
-                  <%= link_to "投稿を編集する", edit_post_path(@post), class: "btn btn-outline-info btn-block edit_post_#{@post.id}" %>
-                  <%= link_to "投稿を削除する", post_path(@post), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn btn-outline-danger btn-block destroy_post_#{@post.id}" %>
-                </div>
+            <div class="row">
+              <div class ="col-md text-center">
+                <%= link_to "投稿を編集する", edit_post_path(@post), class: "btn btn-outline-info btn-block edit_post_#{@post.id}" %>
+                <%= link_to "投稿を削除する", post_path(@post), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn btn-outline-danger btn-block destroy_post_#{@post.id}" %>
               </div>
+            </div>
           <% end %>
         </div>
 
