[update]layout_navbar

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -5,10 +5,10 @@
       <h1>E.G.C.とは？</h1>
     </div>
     <div class="about-title-body">
-      <p>E.G.C. は、開発エンジニアの卵が「自他共に楽しみながら成長していくこと」を応援するサイトです。<br>
-        ポートフォリオの紹介（画像、作品についての説明・アピール、GitHubのURL　等）<br>
+      <p>E.G.C. は、開発エンジニアの卵が「楽しみながら成長していくこと」を応援するサイトです。<br>
+        ポートフォリオの紹介（画像、作品についての説明・アピール、GitHubのURL 等）
         コメントで投稿者と閲覧者のやりとりができます。<br>
-        モチベーションUPやインスピレーション、技術面 等、「成長のきっかけ」「作品の紹介」としてご利用ください。
+        インスピレーションや技術向上 等、「成長のきっかけ」「作品の紹介」としてご利用ください。
       </p>
     </div>
     <div class="row">
@@ -19,7 +19,7 @@
         <div class="about-body">
           <div class="row">
             <div class ="col-md-4">
-               <h4>enjoy</h4>
+               <h4>ENJOY</h4>
                 <p>
                   <small>「眠ったままのポートフォリオ..誰かからの反応が欲しい...」<br>
                   「サービスとして公開できるようなレベルじゃないし...」</small>
@@ -32,7 +32,7 @@
                 <p>成長を楽しみましょう！！</p>
             </div>
             <div class ="col-md-4">
-              <h4>grow</h4>
+              <h4>GROW</h4>
                 <p><small>「どんなデザイン/機能のポートフォリオを作ろうかな...」</small></p>
                 <p>デザインや機能について 等、<br>
                   閲覧、コメントや質問はインスピレーションや技術向上に繋がるかも。
@@ -40,7 +40,7 @@
                 <p>E G.C.を通じて成長しましょう！！</p>
             </div>
             <div class ="col-md-4">
-                <h4>communication</h4>
+                <h4>COMMUNICATION</h4>
                   <p><small>「開発エンジニアを目指す仲間と話をしてみたいな...」</small></p>
                   <p>「いいね！」「コメント」「返信」で<br>
                     横の繋がりを作るきっかけになるかも！
