--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
                 </li>
               <% else %>
                 <li class="nav-item">
-                  <%= link_to 'Home', root_path, class: "nav-link fas fa-home fa-lg" %>
+                  <%= link_to '', root_path, class: "nav-link fas fa-home fa-lg" %>
                 </li>
                 <li class="nav-item">
                   <%= link_to 'About', homes_about_path, class: "nav-link" %>
