--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,7 +26,7 @@
 
           <div class="row">
             <div class ="col-md">
-              <h2><strong><%= @post.title %></strong></h2>
+              <h1><%= @post.title %></h1>
               <h4><%= @post.subtitle %></h4>
               <%= image_tag @post.post_image.thumb.url.to_s, width: "100%" %>
             </div>
