--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,4 +1,4 @@
-<div class ="about-cover">
+<div class="about-cover">
   <div class="container-fluid">
 
     <div class="about-main-title">
@@ -6,20 +6,19 @@
     </div>
     <div class="about-title-body">
       <p>E.G.C. は、開発エンジニアの卵が「楽しみながら成長していくこと」を応援するサイトです。<br>
-        ポートフォリオの紹介（画像、作品についての説明・アピール、GitHubのURL 等）
-        コメントで投稿者と閲覧者のやりとりができます。<br>
-        インスピレーションや技術向上 等、「成長のきっかけ」「作品の紹介」としてご利用ください。
+        ポートフォリオの紹介、コメントで投稿者と閲覧者の交流ができます。<br>
+        インスピレーションや技術向上 等、「成長」「ポートフォリオの紹介」としてご活用ください。
       </p>
     </div>
     <div class="row">
       <div class="col-md-10 offset-md-1">
-        <div class="about-subtitle">
-          <h4>サイト名の由来[頭文字]</h4>
+        <div class="about-origin-title">
+          <h4><strong>サイト名の由来[頭文字]</strong></h4>
         </div>
         <div class="about-body">
           <div class="row">
-            <div class ="col-md-4">
-               <h4>ENJOY</h4>
+            <div class="col-md-4">
+               <h4 class="about-origin">ENJOY</h4>
                 <p>
                   <small>「眠ったままのポートフォリオ..誰かからの反応が欲しい...」<br>
                   「サービスとして公開できるようなレベルじゃないし...」</small>
@@ -31,21 +30,22 @@
                 </p>
                 <p>成長を楽しみましょう！！</p>
             </div>
-            <div class ="col-md-4">
-              <h4>GROW</h4>
+            <div class="col-md-4">
+              <h4 class="about-origin">GROW</h4>
                 <p><small>「どんなデザイン/機能のポートフォリオを作ろうかな...」</small></p>
                 <p>デザインや機能について 等、<br>
                   閲覧、コメントや質問はインスピレーションや技術向上に繋がるかも。
                 </p>
                 <p>E G.C.を通じて成長しましょう！！</p>
             </div>
-            <div class ="col-md-4">
-                <h4>COMMUNICATION</h4>
+            <div class="col-md-4">
+                <h4 class="about-origin">COMMUNICATION</h4>
                   <p><small>「開発エンジニアを目指す仲間と話をしてみたいな...」</small></p>
                   <p>「いいね！」「コメント」「返信」で<br>
                     横の繋がりを作るきっかけになるかも！
                   </p>
-                  <p>"気軽に"コミュニケーションをとりましょう！</p>
+                  <p>マナーを守り、<br>
+                  "気軽に"コミュニケーションをとりましょう！</p>
             </div>
           </div>
         </div>
@@ -94,7 +94,8 @@
         <div class="about-body">
           <p>気軽に質問・コメント・感想 等を送りましょう！<br>
             <small>
-              ＊コメントや返信があった際は、「コメントは投稿者へ」「返信はコメントをした人へ」メールで通知されます。
+              ＊コメントや返信があった際は、「コメントは投稿者へ」
+              「返信はコメントをした人へ」メールで通知されます。
             </small>
           </p>
         </div>
@@ -105,5 +106,6 @@
         <%= link_to '作品を見てみる！！', posts_path, class: "btn btn-info btn-lg" %>
       </div>
     </div>
-   </div>
+
+  </div>
 </div>
