--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,73 +1,86 @@
-        <%= form_with model:post, local: true do |f| %>
+<%= form_with model:post, local: true do |f| %>
 
-        <%= render "devise/shared/error_messages", resource: post %>
+  <%= render "devise/shared/error_messages", resource: post %>
 
-            <div class="form-group">
-              <%= f.label :title, '作品名（必須）' %><br>
-                <small id="title-tip" class="form-text text-muted">
-                    作品名を入力してください！<br>
-                    【 改行不可：1〜50文字以内 】
-                </small>
-                <%= f.text_field :title, class: "form-control" %>
+    <div class="form-group">
+      （<small class="fa fa-asterisk fa-xs asterisk-red"></small>
+      は必須項目です）
+    </div>
 
-            </div>
-            <div class="form-group">
-                <%= f.label :subtitle, 'サブタイトル（必須）' %><br>
-                <small id="subtitle-tip" class="form-text text-muted">
-                  作品テーマを入力してください！（例：ポートフォリオを紹介するWebサイトです）<br>
-                  【 改行不可：5〜80文字以内 】
-                </small>
-                <%= f.text_area :subtitle, class: "form-control" %>
-            </div>
-            <div class="form-group">
-                <%= f.label :post_image, '作品画像（必須）' %><br>
-                <small id="post_image-tip" class="form-text text-muted">
-                    作品画像を1枚アップロードしてください！（例：Top画面）
-                </small>
-                <%= f.file_field :post_image %>
-            </div>
-            <div class="form-group">
-                <%= f.label :body, '投稿内容（必須）' %><br>
-                <small id="body-tip" class="form-text text-muted">
-                    作品について自由にアピールしてください！！
-                    （例：背景・思い/どのような作品か/苦労したこと/工夫したこと　等）<br>
-                    【 20文字以上 】
-                </small>
-                <%= f.text_area :body, class: "form-control", rows:25 %>
-            </div>
-            <div class="form-group">
-                <%= f.label :portfolio_url, '作品URL' %><br>
-                <small id="portfolio_url-tip" class="form-text text-muted">
-                    作品のURLを公開してください！ (例：https://xxx.xx...)
-                </small>
-                <%= f.text_field :portfolio_url, class: "form-control" %>
-            </div>
-            <div class="form-group">
-                <%= f.label :source_code_url, 'ソースコードURL GitHubのリポジトリURL 等' %><br>
-                <small id="source_code_url-tip" class="form-text text-muted">
-                    ソースコードが確認できるURLを公開してください！（例：https://github.com/xxxx　等）
-                </small>
-                <%= f.text_field :source_code_url, class: "form-control" %>
-            </div>
-            <div class="form-group">
-                <%= f.label :message, '一言メッセージ' %><br>
-                <small id="message-tip" class="form-text text-muted">
-                    一言メッセージを入力してください！
-                    （例：コメントください！/作品について語り合いましょう！　等）<br>
-                    【 200文字以内 】
-                </small>
-                <%= f.text_area :message, class: "form-control", rows:5 %>
-            </div>
-            <div class="form-group">
-                <%= f.label :development_environment_text, '開発環境' %><br>
-                <small id="development_environment_text-tip" class="form-text text-muted">
-                    開発環境を入力してください！(例：Ruby 2.5.7/Rails 5.2.4.4　等)<br>
-                    【 800文字以内 】
-                </small>
-                <%= f.text_area :development_environment_text, class: "form-control", rows:8 %>
-            </div>
+    <div class="form-group">
+      <i class="fa fa-asterisk fa-xs asterisk-red"></i>
+      <%= f.label :title %><br>
+      <small id="title-tip" class="form-text text-muted">
+          作品名を入力してください！<br>
+          【 改行不可：1〜50文字以内 】
+      </small>
+      <%= f.text_field :title, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <i class="fa fa-asterisk fa-xs asterisk-red"></i>
+      <%= f.label :subtitle %><br>
+      <small id="subtitle-tip" class="form-text text-muted">
+        作品テーマを入力してください！（例：ポートフォリオを紹介するWebサイトです）<br>
+        【 改行不可：5〜80文字以内 】
+      </small>
+      <%= f.text_area :subtitle, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <i class="fa fa-asterisk fa-xs asterisk-red"></i>
+      <%= f.label :post_image %><br>
+      <small id="post_image-tip" class="form-text text-muted">
+          作品画像を1枚アップロードしてください！（例：Top画面）
+      </small>
+      <%= f.file_field :post_image %>
+    </div>
+    <div class="form-group">
+      <i class="fa fa-asterisk fa-xs asterisk-red"></i>
+      <%= f.label :body %><br>
+      <small id="body-tip" class="form-text text-muted">
+          作品について自由にアピールしてください！！
+          （例：背景/思い/どのような作品か/拘り/工夫したこと/苦労したこと）<br>
+          【 20文字以上 】
+      </small>
+      <%= f.text_area :body, class: "form-control", rows:28 %>
+    </div>
+    <div class="form-group">
+      <%= f.label :portfolio_url %><br>
+      <small id="portfolio_url-tip" class="form-text text-muted">
+          作品のURLを公開してください！ (例：https://xxx.xx...)
+      </small>
+      <%= f.text_field :portfolio_url, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :source_code_url %><br>
+      <small id="source_code_url-tip" class="form-text text-muted">
+        GitHubのリポジトリURL 等、ソースコードが確認できるURLを公開してください！
+        （例：https://github.com/xxxx）
+      </small>
+      <%= f.text_field :source_code_url, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :message %><br>
+      <small id="message-tip" class="form-text text-muted">
+        一言メッセージや困っていること等 ご自由に入力してください！<br>
+        （例：作品について語り合いましょう！<br>
+        　/ header固定のためCSSにfixedを記述したところ、fotterが浮いてしまい困っています。
+        アドバイスいただきたいです！）<br>
+        【 200文字以内 】
+      </small>
+      <%= f.text_area :message, class: "form-control", rows:5 %>
+    </div>
+    <div class="form-group">
+      <%= f.label :development_environment_text %><br>
+      <small id="development_environment_text-tip" class="form-text text-muted">
+          開発環境を入力してください！(例：Ruby/Rails/HTML/CSS/Javascript)<br>
+          【 800文字以内 】
+      </small>
+      <%= f.text_area :development_environment_text, class: "form-control", rows:8 %>
+    </div>
 
-            <h5>記入漏れや誤字脱字はありませんか？最終確認後に新規投稿ボタンを押しましょう</h5>
-            <%= f.submit class: "btn btn-info btn-block" %>
+    <small>
+    マナーに反した不適切な文言や投稿を発見した際は、事前の通告なしに投稿が削除される場合があります。
+  ご了承の程よろしくお願い致します。</small>
+    <%= f.submit class: "btn btn-info btn-block" %>
 
-        <% end %>
+<% end %>
