--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,11 +1,11 @@
 <div class="container-fluid">
   <div class="row">
-    <div class ="col-md text-center">
-      <h1 class>投稿フォーム</h1>
+    <div class="col-md text-center">
+      <h2 class="title">投稿フォーム</h2>
     </div>
   </div>
   <div class="row">
-    <div class ="col-md-8 offset-md-2">
+    <div class="col-md-8 offset-md-2">
       <%= render "posts/form", post: @post %>
     </div>
   </div>
