--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -71,7 +71,7 @@
     <div class = "row">
       <div class ="col-md-5 offset-md-4 ">
         <div class="actions">
-          <%= f.submit class: "btn btn-info btn-block" %>
+          <%= f.submit "登録", class: "btn btn-info btn-block" %>
         </div>
       </div>
     </div>
