--- a/app/views/posts/_index_form.html.erb
+++ b/app/views/posts/_index_form.html.erb
@@ -12,24 +12,19 @@
               <div class="card-body text-dark">
                 <h6><strong class="card-title"><%= post.title %></strong></h6>
                 <div class="card-text"><%= post.subtitle %><br>
-                  <% if user_signed_in? %>
-                    <% if post.favorited_by?(current_user) %>
-                      <%= link_to post_favorites_path(post), method: :delete do %>
-                        <i class="fas fa-heart heart-red"></i>
-                      <% end %>
-                    <% else %>
-                      <%= link_to post_favorites_path(post), method: :post do %>
-                        <i class="fas fa-heart heart-white"></i>
-                      <% end %>
-                    <% end %>
-                  <% else %>
-                    <%= link_to new_user_session_path do %>
+
+                <% if user_signed_in? %>
+                  <div id="favorites_buttons_<%= post.id %>">
+                     <%= render partial: 'favorites/favorite', locals: { post: post} %>
+                  </div>
+                <% else %>
+                  <%= link_to new_user_session_path do %>
                     <i class="fas fa-heart heart-white"></i>
-                    <% end %>
                   <% end %>
-                    <%= post.favorites.count %>
-                    <i class="fas fa-comment-dots"></i>
-                      <%= post.post_comments.count %>
+                  <%= post.favorites.count %>
+                <% end %>
+                <i class="fas fa-comment-dots"></i>
+                  <%= post.post_comments.count %>
                 </div>
                 <div class="card-text">
                     <%= link_to user_path(post.user) do %>
