[Update]navbar_layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,6 +35,11 @@
   color: #fff;
 }
 
+.justify-content-center{
+  text-align: center;
+  background: linear-gradient(45deg, #000000, #000031, #17a2b8, #ffd900);
+}
+
 body {
   background-image: image-url('brandi-redd-aJTiW00qqtI-unsplash.jpg');
   background-size: cover;
